--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/MLX42"]
 	path = lib/MLX42
 	url = https://github.com/codam-coding-college/MLX42.git
+[submodule "lib/--force"]
+	path = lib/--force
+	url = https://github.com/codam-coding-college/MLX42.git
